--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -3,7 +3,7 @@
     <head>
         <meta charset="utf-8" />
         <title>Your SassDoc Theme</title>
-        <link rel="stylesheet" href="assets/css/main.css" />
+        <link rel="stylesheet" href="/static/css/main.css" />
 
         {{!
          ! Feel free to add more meta or stylesheets. It's up to you.
