--- a/scss/main.scss
+++ b/scss/main.scss
@@ -1,22 +1,29 @@
-//
-// Sass utils
-//
+/**
+ * Sass utils
+ */
 @import "utils/variables";
 @import "utils/functions";
 @import "utils/mixins";
 @import "utils/helpers";
 
-//
-// Vendors
-//
-@import "vendors/vendors";
+/**
+ * Vendors
+ */
+@import "vendors/prism";
 
-//
-// Base
-//
+/**
+ * Base stuff
+ */
 @import "base/base";
+@import "base/layout";
+@import "base/helpers";
 
-//
-// Partials
-//
+/**
+ * Partials
+ */
+@import "partials/header";
+@import "partials/searchbar";
+@import "partials/sidebar";
 @import "partials/main";
+@import "partials/footer";
+@import "partials/item";
